[Docs] Fix top navbar from overflowing when viewing on Pixel 3a (#4098)

--- a/docs/styles/_navbar.scss
+++ b/docs/styles/_navbar.scss
@@ -169,7 +169,7 @@ body {
   }
 
   .navbar-search-small {
-    width: auto;
+    width: 60%;
     flex-grow: 1;
     margin: 0 23px 0 20px;
 
